# devscontext

./: .devscontext.yaml.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml  publish.yml
docs/: CNAME  configuration.md  cursor-setup.md  index.html  plugins.md  pre-processing.md  windsurf-setup.md
docs/example/adrs/: 001-webhook-retry-strategy.md
docs/example/architecture/: payments-service.md
docs/example/standards/: testing.md  typescript.md
src/devscontext/: __init__.py  cache.py  cli.py  config.py  constants.py  core.py  demo_data.py  exceptions.py  logging.py  models.py  server.py  storage.py  synthesis.py  utils.py
src/devscontext/adapters/: __init__.py  base.py  fireflies.py  github_adapter.py  gmail.py  jira.py  local_docs.py  slack.py
src/devscontext/agents/: __init__.py  preprocessor.py  watcher.py
src/devscontext/plugins/: __init__.py  base.py  registry.py
src/devscontext/rag/: __init__.py  embeddings.py  index.py
tests/: __init__.py  test_fireflies.py  test_github.py  test_gmail.py  test_integration.py  test_jira.py  test_local_docs.py  test_preprocessor.py  test_registry.py  test_server.py  test_slack.py  test_storage.py  test_synthesis.py  test_synthesis_quality.py  test_utils.py  test_watcher.py
tests/fixtures/: docs_context.json  jira_ticket.json  meeting_transcript.json
tests/fixtures/docs/adrs/: 001-use-event-sourcing.md
tests/fixtures/docs/architecture/: payments-service.md
tests/fixtures/docs/standards/: testing.md  typescript.md
