[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "devscontext"
version = "0.1.0"
description = "MCP server that provides AI coding agents with synthesized engineering context from SDLC tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "you@devscontext.com" },
]
keywords = ["mcp", "ai", "context", "jira", "claude-code", "developer-tools"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "click>=8.0",
    "pydantic>=2.0",
    "cachetools>=5.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai = ["openai>=1.50"]
all = ["anthropic>=0.40", "openai>=1.50"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.30",
    "ruff>=0.8",
]

[project.scripts]
devscontext = "devscontext.cli:main"

[project.urls]
Homepage = "https://devscontext.com"
Repository = "https://github.com/yourusername/devscontext"
Documentation = "https://devscontext.com/docs"

[tool.hatch.build.targets.wheel]
packages = ["src/devscontext"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
